--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
+    "form-data": "^4.0.0",
+    "framer-motion": "^7.6.5",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-confetti": "^6.1.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.1",
+    "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.24",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "eslint-config-next": "13.0.0",
+    "init-p": "^1.0.0",
+    "npx": "^10.2.2",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
