--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "form-data": "^4.0.0",
     "framer-motion": "^7.6.5",
     "next": "13.0.0",
+    "next-translate": "^1.0.0-experimental.18",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
